--- a/Button/app/src/main/res/layout/activity_main.xml
+++ b/Button/app/src/main/res/layout/activity_main.xml
@@ -18,4 +18,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="클릭"/>
+
+    <EditText
+        android:id="@+id/ed_ps"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:hint="비밀번호를 입력해주세요"/>
+    <Button
+        android:id="@+id/but_test2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="클릭"/>
+
+
 </LinearLayout>
